--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+permute = "0.2.1"
 tokio = { version = "1.36.0", features = ["full"] }
 
 [lib]
@@ -17,3 +18,7 @@ path = "src/bin/day-02/main.rs"
 [[bin]]
 name = "day-05"
 path = "src/bin/day-05/main.rs"
+
+[[bin]]
+name = "day-07"
+path = "src/bin/day-07/main.rs"
