--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -26,3 +26,7 @@ path = "src/bin/day-07/main.rs"
 [[bin]]
 name = "day-09"
 path = "src/bin/day-09/main.rs"
+
+[[bin]]
+name = "day-11"
+path = "src/bin/day-11/main.rs"
